Langlabel widget text now wraps correctly for all sizes

--- a/webapp/src/app/shared/widgets/language-label-widget/language-label-widget.component.scss
+++ b/webapp/src/app/shared/widgets/language-label-widget/language-label-widget.component.scss
@@ -7,9 +7,18 @@ div.row {
 			width: 45px;
 		}
 		
+		& div {
+			padding: 4px;
+			display: inline-block;
+			height: unset;
+		}
+		
 		& textarea {
 			resize: none;
-			padding: 4px;
+			padding: 0px;
+			width: 100%;
+			height: 100%;
+			outline: none;
 		}
 	}
 	
